--- a/StarWarsApp/StarWarsApp/app/build.gradle
+++ b/StarWarsApp/StarWarsApp/app/build.gradle
@@ -59,4 +59,9 @@ dependencies {
     //RecyclerView
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
+
+    //Dagger
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.8'
+    compile 'com.google.dagger:dagger:2.8'
+    provided 'javax.annotation:jsr250-api:1.0'
 }
